fix: used color contrast

--- a/src/theme/extras/_tables.scss
+++ b/src/theme/extras/_tables.scss
@@ -50,19 +50,19 @@
   &.inverted {
     @extend .table-dark;
     a {
-      color: $white;
+      color: color-contrast($primary);
       &:hover {
         text-decoration: none;
       }
     }
     .blockquote,
     .blockquote-card {
-      border-color: $white !important;
+      border-color: color-contrast($primary) !important;
     }
     .blockquote-card {
       box-shadow: 0 2px 4px rgba(255, 255, 255, 0.2);
       &.dark {
-        background-color: $white;
+        background-color: color-contrast($primary);
         color: $text-color;
         a {
           color: $link-color;
